# NgenuMCP

./: LICENSE  NgenuMCP.py  README.md  pyproject.toml  result.json
NgenuMCP/: __init__.py  client.py  const.py  display.py
NgenuMCP/handlers/: call.py  enum.py  fuzz.py
NgenuMCP/wordlists/: domains.txt  hosts.txt  ports.txt  resources.txt
tests/: test_client.py  test_display.py  test_fuzz.py  test_integration.py
tests/servers/: fastmcp_server.py  stdlib_server.py
tests/servers/files/: credentials.txt  employees.csv  nosferatu.txt  notes.txt
