[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ngenu-mcp"
version = "0.1.0"
description = "MCP server enumeration tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["httpx>=0.27.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "fastmcp>=3.0", "uvicorn>=0.20"]

[tool.setuptools.packages.find]
where = ["."]
include = ["NgenuMCP*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=NgenuMCP --cov-report=term-missing"
markers = ["integration: tests that require a live server"]
filterwarnings = [
    "ignore::DeprecationWarning:websockets",
    "ignore::DeprecationWarning:uvicorn",
]
